--- a/style.css
+++ b/style.css
@@ -1,67 +1,178 @@
-#main{
-    height: 470px;
-    width: 550px;
-    border: 0.5px solid black;
-    margin: auto;
-    margin-top: 7%;
-    text-align: center; 
-    background: rgba(225,225,225,0.3);
-    box-shadow: 5px 5px 5px rgb(0, 0, 0);
-    border-radius: 15%;
-    border: none;
-   
-    
-}
-#rules{
-   text-align: justify;
-   margin-left: 21%;
-   font-weight: bolder;
-}
-#n1{
-    height: 25px;
-    width: 200px;
-    margin-left: 10px;
-}
-button{
-    height: 30px;
-    width: 90px;
-    border-bottom-left-radius: 10px;
-    border-top-left-radius: 10px;
-    border-bottom-right-radius:10px;
-    border-top-right-radius: 10px;
-    font-weight: bold;
-    background: linear-gradient(40deg,rgb(246, 30, 181),rgb(212, 186, 38),rgb(145, 9, 236));
-    box-shadow: 5px 5px 5px white;
-    margin-top: -2%;
-}
-#buttons{
-    display: flex;
-    justify-content: space-around;
-   
-}
 body{
-   background: url("https://e0.pxfuel.com/wallpapers/521/860/desktop-wallpaper-casino.jpg");
-    background-size: cover;
+    background: rgb(0, 0, 0);
 }
 
-button:hover{
-    background: linear-gradient(40deg,rgb(17, 17, 17),rgb(240, 238, 240),rgb(204, 0, 0));
-    height: 40px;
-    width: 100px;
+#face{
+    height: 200px;
+    width: 200px;
+    background: linear-gradient(40deg,rgb(226, 109, 226),white,rgb(48, 45, 45));
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    margin: auto;
+    margin-top: 70px;
+  
+
 }
-h2{
-    margin-top: 7%;
+
+#larm,#rarm{
+    height: 100px;
+    width: 25px;
+    background: linear-gradient(40deg,rgb(226, 109, 226),white,rgb(48, 45, 45));    
+    margin-top: 15px;
+    border-radius: 50px;
 }
-b{
-    color: mediumturquoise;
+
+#centre{
+    height: 200px;
+    width: 200px;
+    background: linear-gradient(40deg,rgb(226, 109, 226),white,rgb(48, 45, 45));
+    border-bottom-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+
 }
-h2{
-    padding-top: 25px;
+#body{
+    width: 300px;
+    justify-content: space-evenly;
+    margin: auto;
+    display: flex;
+    margin-top: 15px;
 }
-#count{
-    margin-top: -1%;
+#lleg,#rleg{
+    height: 130px;
+    width: 30px;
+    background: linear-gradient(40deg,rgb(226, 109, 226),white,rgb(48, 45, 45));
+    margin: auto;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
 }
-#ss{
-    color: rgb(53, 11, 240);
-   
+#leg{
+    width: 230px;
+    display: flex;
+    margin: auto;
+    margin-top: -20px;
+    justify-content: space-evenly;
+}
+
+#leye,#reye{
+    height: 25px;
+    width: 25px;
+    background: black;
+    margin: auto;
+    margin-top: 100px;
+    border-radius: 50%;
+}
+
+#eyes{
+    display: flex;
+    margin: auto;
+}
+#main{
+    height: 600px;
+    width: 350px;
+    border: 3px solid white;
+    margin: auto;
+    margin-top: 50px;
+    padding-top: 10px;
+
+}
+#main:hover #face{
+    width: 250px;
+    background: linear-gradient(90deg,rgb(185, 142, 142),rgb(163, 163, 197rgb(29, 32, 32)6));
+    animation: changeface 1s 10;
+}
+
+@keyframes changeface{
+    0%{
+        transform: translateX(50px);
+       
+    }
+    100%{
+        transform: translateX(-50px);
+    }
+}
+
+
+#main:hover #larm{
+    background: violet;
+    animation: changelarm 1s 10;
+}
+@keyframes changelarm{
+    0%{
+        transform: rotate(0deg);
+        transform-origin: top center;
+    }
+    50%{
+        transform: rotate(110deg);
+        
+    }
+
+}
+
+#main:hover #rarm{
+    background: violet;
+    animation: changerarm  1s 10;
+}
+@keyframes changerarm{
+    0%{
+        transform: rotate(0deg);
+        transform-origin: top center;
+    }
+    50%{
+        transform: rotate(150deg);
+        
+    }
+}
+#main:hover #lleg{
+
+    animation: changelleg 1s 10;
+}
+@keyframes changelleg{
+    0%{
+        transform: rotate(30deg);
+        
+    }
+    50%{
+        transform: rotate(-30deg);
+    }
+}
+
+#main:hover #rleg{
+
+    animation: changelleg 1s 10;
+}
+@keyframes changerleg{
+    0%{
+        transform: rotate(30deg);
+        
+    }
+    50%{
+        transform: rotate(-30deg);
+    }
+}#main:hover #centre{
+    background: linear-gradient(rgb(17, 124, 212),rgb(192, 192, 192),hot rgb(216, 126, 211));
+    animation: changerarm  1s 10;
+    border-radius: 20%;
+
+    
+}
+@keyframes changecentre{
+    0%{
+        transform: rotate(15deg);
+        transform-origin: top center;
+    }
+    50%{
+        transform: rotate(-15deg);
+        
+    }100%{
+        transform: rotate(15deg);
+        
+    }
+}
+h1{
+    color: chartreuse;
+    text-align: center;
+    font-size: 50px;
+    font-style: italic;
 }
